--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Harping on about 365 and associated technologies
+title: A place to share and reflect on little Lightbulb Moments and a general place to rant on and about the world of tech.
 ---
 
 <h1>{{ page.title }}</h1>
